# server/routes/index.ts
@@ -1,7 +1,8 @@
 import { Router } from "express";
 import authRoutes from "./auth.routes";
 import userRoutes from "./user.routes";
-import { fridgesRoutes } from "./fridges.routes"; 
+import { fridgesRoutes } from "./fridges.routes";
+import { chatRoutes } from "./chat.routes";
 
 const router = Router();
 
@@ -12,5 +13,6 @@ router.get("/health", (_req, res) => {
 router.use("/auth", authRoutes);
 router.use("/user", userRoutes);
 router.use("/fridges", fridgesRoutes);
+router.use("/chats", chatRoutes);
 
 export default router;
